--- a/style.css
+++ b/style.css
@@ -26,8 +26,9 @@ section{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%,-50%);
     padding: 20px;
+    min-width: 300px;
 }
 section h1{
     text-align: center;
@@ -39,7 +40,7 @@ section h1{
     align-items: center;
 }
 .inputs input{
-    width: 10%;
+    width: 70px;
     padding: 10px;
     outline: 0;
     border: 0;
@@ -50,6 +51,14 @@ section h1{
     margin:0 20px;
     font-size:30px;
 }
-.inputs button{
-    margin-left: 30px;
+.btn{
+    text-align: center;
+    margin-top: 20px;
+}
+section button{
+    padding:18px 20px;
+    text-transform: uppercase;
+    width: 30%;
+    font-size: 20px;
+    min-width: 110px;
 }
